--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
   cupertino_icons: ^1.0.8
+  cloud_firestore: ^4.15.7
+
 
 dev_dependencies:
   flutter_test:
